--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,9 +64,8 @@ footer{
 
 .meals{
     height: 10vh;
-    width: 99%;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
     align-items: center;
     overflow: scroll;
 }
@@ -75,6 +74,7 @@ footer{
     padding: 1vh 5vw;
     border-radius: 5vw;
     border: 2px solid black;
+    margin: 0 2vw;
 }
 
 .meal p{
@@ -91,4 +91,12 @@ main{
     height: 100%;
     font-size: 5vw;
     font-family: 'Inter', sans-serif;
+}
+
+.display-none{
+    display: none !important;
+}
+
+.card{
+    display: block;
 }
