--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,9 +4,10 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-bottom: 7vh;
 }
 
-footer{
+.main-footer{
     position: fixed;
     bottom: 0;
     left: 0;
@@ -17,6 +18,11 @@ footer{
     align-items: center;
     border: 2px solid #E5E5E5;
     border-radius: 5vw 5vw 0px 0px;
+    background-color: azure;
+}
+
+.chapter{
+    width: 15vw;
 }
 
 .search-line{
@@ -99,4 +105,70 @@ main{
 
 .card{
     display: block;
+    margin: 4vh 0vw ;
+    width: 100%;
+    height: 20vh;
+    border-radius: 5vw;
+    display: flex;
+    justify-content: space-around;
+    box-shadow: 0vw 1vh 10px grey;
+    background-color: white;
+}
+.card-header {
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    font-size: 4.5vw;
+}
+
+.dish-nation, .dish-maker{
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 4.2vw;
+    color: #8D8D8D;
+}
+
+.time-cooking{
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 3.7vw;
+    color: #6FBDA1;
+}
+
+
+.about{
+    width: 60%;
+    height: 100%;
+    padding: 2vh 0vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-image{
+    display: flex;
+    align-items: center;
+}
+.card-main{
+    height: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.card-image img{
+    width: 26vw;
+    border-radius: 3vw;
+}
+
+.card-footer{
+    height: 30%;
+    display: flex;
+    align-items: center;
+}
+
+main{
+    overflow: scroll;
+    padding: 0vh 7vw;
+    width: 100%;
+    
 }
