--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,7 +54,7 @@ body{
 }
 
 .search-button img{
-    width: 50%;
+    width: 40%;
     height: 50%;
 }
 
@@ -107,10 +107,11 @@ main{
     display: block;
     margin: 4vh 0vw ;
     width: 100%;
-    height: 20vh;
+    height: 19vh;
     border-radius: 5vw;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     box-shadow: 0vw 1vh 10px grey;
     background-color: white;
 }
@@ -147,6 +148,8 @@ main{
 .card-image{
     display: flex;
     align-items: center;
+    width: 25%;
+    height: 90%;
 }
 .card-main{
     height: 45%;
@@ -156,7 +159,7 @@ main{
 }
 
 .card-image img{
-    width: 26vw;
+    width: 100%;
     border-radius: 3vw;
 }
 
