--- a/CSS/style.css
+++ b/CSS/style.css
@@ -76,11 +76,18 @@ body{
     overflow: scroll;
 }
 
+
 .meal{
     padding: 1vh 5vw;
     border-radius: 5vw;
     border: 2px solid black;
     margin: 0 2vw;
+}
+
+.meal-clicked{
+    background-color: #6FBDA1;
+    border: 2px solid #6FBDA1;
+    color: white;
 }
 
 .meal p{
@@ -114,7 +121,15 @@ main{
     align-items: center;
     box-shadow: 0vw 1vh 10px grey;
     background-color: white;
+    transform: scale(1);
+    transition-duration: 0.3s;
 }
+
+.card:hover{
+    transform: scale(1.07);
+    transition-duration: 0.3s;
+}
+
 .card-header {
     font-family: 'Inter', sans-serif;
     font-weight: 600;
